2/3 Grand opening - completed

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
         <!-- NAV  -->
         <input checked type="radio" name="tabset_1" id="tabset_1_contact" hidden aria-hidden="true">
         <input type="radio" name="tabset_1" id="tabset_1_services" hidden aria-hidden="true">
-        <input type="radio" name="tabset_1" id="tabset_1_about" hidden aria-hidden="true">
-        <input type="radio" name="tabset_1" id="tabset_1_brands" hidden aria-hidden="true">
+        <!-- <input type="radio" name="tabset_1" id="tabset_1_about" hidden aria-hidden="true"> -->
 
         <!-- NAMES @ THE TOP -->
         <!-- Change these to change what displays under the header -->
@@ -49,11 +48,11 @@
                     Services
                 </label>
             </li>
-            <li>
+            <!-- <li>
                 <label for="tabset_1_about">
                     About
                 </label>
-            </li>
+            </li> -->
         </ul>
 
         <!-- PAGE CONTENT (Info, Services, About)-->
@@ -63,7 +62,7 @@
             <!-- ********************* -->
             <section class="contact">
                 <!-- Info Image -->
-                <img src="assets/images/phone-edit.jpg" alt="man calling Opalescent Cyclery for help"/>
+                <img src="assets/images/powerline.jpg" alt="man calling Opalescent Cyclery for help"/>
 
                 <h2>Info</h2>  <!-- This header is hidden by tabset stuff-->
 
@@ -226,8 +225,8 @@
                         </h3>
                         <ul role="list">
                             <li class="single-dash">Everything listed in Standard Tune</li>
-                            <li class="single-dash">Full removal of drivetrain components for deep clean
-                            </li>
+                            <li class="single-dash">Full removal of drivetrain components for deep clean</li>
+                            <li class="italic">Shift cable and brake cable install service included</li>
                         </ul>
                     </li>
 
@@ -286,12 +285,13 @@
                         </li>
                         <li>
                             Tubeless Setup
-                            <span class="pull-right">$30.00</span>
+                            <span class="italic">includes rim inspection</span>
+                            <span class="pull-right">$40.00</span>
                         </li>
                         <li>
                             Internal Hub
                             <span class="italic">includes shifting inspection</span>
-                            <span class="pull-right">$25.00</span>
+                            <span class="pull-right">$30.00</span>
                         </li>
                         <li>
                             Hub Drive (E-bike) 
@@ -320,7 +320,7 @@
                     </ul>
 
                     <p>
-                        Don’t see the service you are looking for? Ala Carte services start at $25.00 and are charged the shop rate of
+                        Don&rsquo;t see the service you are looking for? Ala Carte services start at $25.00 and are charged the shop rate of
                         $100.00/hour after the first 30 minutes. Please call for details.
                     </p>
                 </div>
