Updated verbiage & styles

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                             <li class="single-dash">Adjust headset</li>
                             <li class="single-dash">Inspect bottom bracket</li>
                             <li class="single-dash">Inflate tires</li>
-                            <li class="italic">flat fix/re-juice tubeless sealant service included with this package</li>
+                            <li class="italic">flat fix/re-juice tubeless sealant labor included with this package</li>
                         </ul>
                     </li>
 
@@ -196,7 +196,7 @@
                             <li class="single-dash">Everything listed in the Basic Tune</li>
                             <li class="single-dash">Lateral and vertical wheel true</li>
                             <li class="single-dash">Adjust hub bearings</li>
-                            <li class="italic">Chain installation service included with this package</li>
+                            <li class="italic">Chain installation labor included with this package</li>
                         </ul>
                     </li>
 
@@ -212,7 +212,7 @@
                         <ul role="list">
                             <li class="single-dash">Everything listed in Standard Tune</li>
                             <li class="single-dash">Full removal of drivetrain components for deep clean</li>
-                            <li class="italic">Shift cable and brake cable install service included</li>
+                            <li class="italic">Shift cable and brake cable install labor included</li>
                         </ul>
                     </li>
 
@@ -249,7 +249,7 @@
                             <li class="single-dash">Hubs and headset adjusted</li>
                             <li class="single-dash">Bottom bracket inspected</li>
                             <li class="single-dash">Inflate tires</li>
-                            <li class="italic">flat fix/re-juice tubeless sealant and chain installation service included with this package</li>
+                            <li class="italic">flat fix/re-juice tubeless sealant and chain installation labor included with this package</li>
                         </ul>
                     </li>
                 </ul>
@@ -259,7 +259,10 @@
                 <!-- ADD SERVICES DISCLAIMER -->
                 <div class="ala-carte margin-bottom">
                     <!-- <h2>General Services</h2> -->
-                    <h3>Tire Services</h3>
+                    <h3>
+                        Tire Services 
+                        <span class="italic small grey">labor only</span>
+                    </h3>
                     <ul>
                         <li>
                             Standard Tube 
@@ -285,7 +288,10 @@
                         </li>
                     </ul>
 
-                    <h3>Brake Services</h3>
+                    <h3>
+                        Brake Services
+                        <span class="italic small grey">labor only</span>
+                    </h3>
                     <ul>
                         <li>
                             Brake Bleed (mineral oil)
@@ -297,7 +303,10 @@
                         </li>
                     </ul>
 
-                    <h3>Drivetrain Services</h3>
+                    <h3>
+                        Drivetrain Services
+                        <span class="italic small grey">labor only</span>
+                    </h3>
                     <ul>
                         <li>
                             Chain install
@@ -306,7 +315,7 @@
                     </ul>
 
                     <p>
-                        Don&rsquo;t see the service you are looking for? Ala Carte services start at $25.00 and are charged the shop rate of
+                        Don&rsquo;t see the service you are looking for? Ala Carte labor starts at $25.00 and are charged the shop rate of
                         $100.00/hour after the first 30 minutes. Please call for details.
                     </p>
                 </div>
